@@ -17,8 +17,15 @@ public class WebConfig {
     public CorsFilter corsFilter() {
         CorsConfiguration configuration = new CorsConfiguration();
         
-        // 개발 환경에서는 모든 origin 허용, 프로덕션에서는 구체적인 origin 지정
-        configuration.setAllowedOriginPatterns(List.of("*"));
+        // 프로덕션 환경에서 허용할 origin들
+        List<String> allowedOrigins = Arrays.asList(
+            "https://melog-ai.vercel.app",           // Vercel 프론트엔드
+            "https://49.50.134.32",                  // Load Balancer IP
+            "https://melog508.duckdns.org",          // DuckDNS 도메인
+            "http://localhost:3000",                 // 로컬 개발용
+            "http://localhost:8080"                  // 로컬 개발용
+        );
+        configuration.setAllowedOrigins(allowedOrigins);
         
         // 모든 HTTP 메서드 허용
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH", "HEAD"));
@@ -29,8 +36,8 @@ public class WebConfig {
         // 모든 헤더 노출
         configuration.setExposedHeaders(Arrays.asList("*"));
         
-        // Credentials 허용 (주의: allowCredentials가 true일 때는 구체적인 origin 지정 권장)
-        configuration.setAllowCredentials(false); // true로 설정하면 구체적인 origin 필요
+        // Credentials 허용 (구체적인 origin 설정했으므로 true 가능)
+        configuration.setAllowCredentials(true);
         
         // Preflight 요청 캐시 시간
         configuration.setMaxAge(3600L);
